<resources>
    <string name="app_name">Shoe Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter email</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_fragment_title">Welcome</string>
    <string name="login_fragment_title">Login</string>
    <string name="logout">Logout</string>
    <string name="enter_password">Enter password</string>
    <string name="instructions">Instructions</string>
    <string name="instruction_text">Press below button to open shoe list.</string>
    <string name="shoe_list">Shoe list</string>
    <string name="fab">Fab</string>
    <string name="shoe_list_fragment_title">Shoe list</string>
    <string name="show_details_fragment_title">Shoe details</string>
    <string name="shoe_name_label">Shoe name</string>
    <string name="enter_shoe_name">Enter shoe name</string>
    <string name="shoe_company_label">Company</string>
    <string name="enter_company_name">Enter company name</string>
    <string name="shoe_size_label">Size</string>
    <string name="description_label">Descrption</string>
    <string name="enter_description">Enter Description</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="shoe_name_format">Shoe name: %s</string>
    <string name="shoe_size_format">Shoe size: %s</string>
    <string name="shoe_company_format">Company: %s</string>
</resources>